product edit picture and checkfields

--- a/ServiceComplex/Pages/Products/Create.cshtml
+++ b/ServiceComplex/Pages/Products/Create.cshtml
@@ -38,7 +38,7 @@
         <a class="nav-link disabled" id="justify-pictures-tab" data-toggle="tab" href="#justify-pictures" role="tab" aria-controls="justify-contact" aria-selected="false">عکس های محصول</a>
     </li>*@
 </ul>
-<form method="post" enctype="multipart/form-data" class="needs-validation" id="createForm" name="createForm">
+<form method="post"  enctype="multipart/form-data" class="needs-validation" id="ProductForm" name="ProductForm">
 <div class="tab-content" id="justifyTabContent">
 <div class="tab-pane fade show active" id="justify-home" role="tabpanel" aria-labelledby="justify-home-tab">
     <div class="row layout-top-spacing" id="cancel-row">
@@ -175,7 +175,7 @@
 
             </div>
         </div>
-        <button id="first-form" style="margin-right:90%" type="submit" class="btn btn-info btn-sm btn-rounded pull-left">بعدی</button>
+        <button id="first-form" style="margin-right:90%" type="button" class="btn btn-info btn-sm btn-rounded pull-left">بعدی</button>
 
     </div>
 </div>
@@ -356,7 +356,7 @@
             </div>
         </div>
    </div>
-   <button id="final-submit" type="submit" class="btn btn-success btn-sm btn-rounded pull-left">تایید نهایی</button>
+   <button id="final-submit" type="button" class="btn btn-success btn-sm btn-rounded pull-left">تایید نهایی</button>
 
 </div>
 
